--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-<body>Hello.</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    
+    <style>
+      table {
+border-collapse:collapse;border-spacing:0}
+
+th{
+border-color:black;
+border-style:solid;
+border-width:0px;
+font-family:Arial, sans-serif;font-size:14px;
+font-weight:normal;
+overflow:hidden;
+padding:10px 5px;
+word-break:normal}
+
+thead {
+border-color:#000000;
+font-family:"Palatino Linotype", "Book Antiqua", Palatino, serif;
+font-size:36px;
+text-align:left;
+vertical-align:top}
+
+td {
+border-color:#000000;
+font-family:"Lucida Console", Monaco, monospace;
+text-align:left;
+vertical-align:top;
+border-color:black;
+border-style:solid;
+border-width:0px;
+font-family:Arial, sans-serif;
+font-size:14px;
+overflow:hidden;
+padding:10px 5px;
+word-break:normal}
+    </style>
+  </head>
+  <body>
+  
+ <center>
+<table width="80%">
+<thead>
+  <tr>
+    <th colspan="2">Abby Walter</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td>Text</td>
+    <td>
+      Link 1 
+    <br>Link 2
+    <br>Link 3</td>
+  </tr>
+  <tr>
+    <td colspan="2">Website by Abby Walter</td>
+  </tr>
+</tbody>
+</table>
+    </center>
+
+</body>
+</html>
