--- a/index.html
+++ b/index.html
@@ -4,56 +4,51 @@
     
     <style>
       table {
-border-collapse:collapse;border-spacing:0}
+border-collapse:collapse;
+        border-spacing:0}
 
 th{
-border-color:black;
-border-style:solid;
-border-width:0px;
-font-family:Arial, sans-serif;font-size:14px;
-font-weight:normal;
-overflow:hidden;
-padding:10px 5px;
-word-break:normal}
-
-thead {
-border-color:#000000;
 font-family:"Palatino Linotype", "Book Antiqua", Palatino, serif;
 font-size:36px;
 text-align:left;
-vertical-align:top}
-
-td {
-border-color:#000000;
-font-family:"Lucida Console", Monaco, monospace;
-text-align:left;
-vertical-align:top;
-border-color:black;
-border-style:solid;
+vertical-align:bottom
 border-width:0px;
-font-family:Arial, sans-serif;
-font-size:14px;
-overflow:hidden;
 padding:10px 5px;
 word-break:normal}
+
+td {
+   font-family:"Lucida Console", Monaco, monospace;
+  text-align:left;
+  font-size:14px;
+  word-break:normal;
+  vertical-align:top;
+  border-width:0px;
+  padding:10px 5px}
     </style>
   </head>
   <body>
   
  <center>
-<table width="80%">
+<table width="60%">
 <thead>
   <tr>
-    <th colspan="2">Abby Walter</th>
+    <th colspan="2", height = 200px>Abby Walter</th>
   </tr>
 </thead>
 <tbody>
   <tr>
-    <td>Text</td>
     <td>
-      Link 1 
-    <br>Link 2
-    <br>Link 3</td>
+      Icon
+    <br>About
+    <br>Research
+    <br>Contact
+    <p>Github
+    <br>Twitter
+    <br>Orcid
+    <br>Email</td>
+    <td>
+    Text
+    </td>
   </tr>
   <tr>
     <td colspan="2">Website by Abby Walter</td>
