--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ font-size:36px;
 text-align:left;
 vertical-align:bottom
 border-width:1px;
+  border-color:#000000;
 padding:10px 5px;
 word-break:normal}
 
@@ -23,6 +24,7 @@ td {
   word-break:normal;
   vertical-align:top;
   border-width:1px;
+  border-color:#000000;
   padding:10px 5px}
     </style>
   </head>
