--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Montserrat'>
-    <link rel="stylesheet" href="/css/academicons.min.css">
+    <link rel="stylesheet" href="css/academicons.min.css">
     <style>
       table {
 border-collapse:collapse;
@@ -43,7 +43,7 @@ td {
 <tbody>
   <tr>
     <td width = "25%">
-      <img src = "images/abby.png">
+      <img src = "images/abby.png" width = 100px height = 100px>
     <br>About
     <br>Research
     <br>Contact
