--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ td {
 <tbody>
   <tr>
     <td width = "25%">
-      <img src = "images/abby.png" width = 100px height = 100px>
+      <img src = "images/abby.png" width="100" height="100">
     <br>About
     <br>Research
     <br>Contact
