--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Montserrat'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="css/academicons.min.css">
     <style>
       table {
@@ -43,17 +43,17 @@ td {
 <tbody>
   <tr>
     <td width = "25%">
-      <img src = "images/abby.png" width="100" height="100">
+      <img src = "images/abby.png" width="125" height="125">
     <br>About
     <br>Research
     <br>Contact
       
     <br>
-      <br><i class="fab fa-github"></i>
-      <br><i class="fab fa-twitter"></i>
-      <br><i class="fab fa-orcid"></i>
-      <br><i class="fab fa-dryad"></i>
-      <br><i class="fab fa-email"></i>
+      <br><i class="ai ai-github ai-2x"></i>
+      <br><i class="ai ai-twitter ai-2x"></i>
+      <br><i class="ai ai-orcid ai-2x"></i>
+      <br><i class="ai ai-dryad ai-2x"></i>
+      <br><i class="ai ai-email ai-2x"></i>
       
       <br>Github
     <br>Twitter
