--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="css/academicons.min.css">
+    <script src="https://kit.fontawesome.com/fcfb671baa.js" crossorigin="anonymous"></script>
     <style>
       table {
 border-collapse:collapse;
@@ -49,17 +50,11 @@ td {
     <br>Contact
       
     <br>
-      <br><i class="ai ai-github ai-2x"></i>
-      <br><i class="ai ai-twitter ai-2x"></i>
+      <br><i class="fab fa-github fa-2x"></i>
+      <br><i class="fab fa-twitter fa-2x"></i>
       <br><i class="ai ai-orcid ai-2x"></i>
       <br><i class="ai ai-dryad ai-2x"></i>
-      <br><i class="ai ai-email ai-2x"></i>
-      
-      <br>Github
-    <br>Twitter
-    <br>Orcid
-     <br>Dryad
-    <br>Email</td>
+      <br><i class="fas fa-envelope fa-2x"></i>
     <td>
     Text
     </td>
