--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@ td {
     <br>Contact
       
     <br>
-      <br><i class="fab fa-github fa-2x"></i>
-      <br><i class="fab fa-twitter fa-2x"></i>
-      <br><i class="ai ai-orcid ai-2x"></i>
+      <br><a href = "http://github.com/lawalter"><i class="fab fa-github fa-2x"></i></a>
+      <br><a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-2x"></i></a>
+      <br><a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-2x"></i></a>
       <br><i class="ai ai-dryad ai-2x"></i>
+      <br><a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird"></i></a>
       <br><i class="fas fa-envelope fa-2x"></i>
     <td>
     Text
