--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
   <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="css/academicons.min.css">
-    <script src="https://kit.fontawesome.com/fcfb671baa.js" crossorigin="anonymous"></script>
     <style>
       table {
 border-collapse:collapse;
         border-spacing:0}
 
 th{
-font-family:"Montserrat", serif;
-font-size:48px;
+font-family:"Lucida Console", Monaco, monospace;
+font-size:14px;
 text-align:left;
 vertical-align:bottom;
 border-width:1px;
@@ -38,24 +37,24 @@ td {
 <table width="60%">
 <thead>
   <tr>
-    <th colspan="2", height = 125px>Abby Walter</th>
+    <th></th>
+    <th height = 100px>about . research . contact</th>
   </tr>
 </thead>
 <tbody>
   <tr>
     <td width = "25%">
-      <img src = "images/abby.png" width="125" height="125">
-    <br>About
-    <br>Research
-    <br>Contact
-      
+    <img src = "images/abby.png" width="125" height="125">
     <br>
-      <br><a href = "http://github.com/lawalter"><i class="fab fa-github fa-2x"></i></a>
-      <br><a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-2x"></i></a>
-      <br><a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-2x"></i></a>
-      <br><i class="ai ai-dryad ai-2x"></i>
-      <br><a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird"></i></a>
-      <br><i class="fas fa-envelope fa-2x"></i>
+      <br><p style="font-family:Montserrat;font-size:14px;"><b>Abby Walter</b></p>
+            
+    <br>
+      <br><a href = "http://github.com/lawalter"><i class="fab fa-github fa-2x"></i> github</a>
+      <br><a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-2x"></i> twitter</a>
+      <br><a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-2x"></i> orcid</a>
+      <br><i class="ai ai-dryad ai-2x"></i> dryad
+      <br><a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird"></i> eBird</a>
+      <br><i class="fas fa-envelope fa-2x"></i> email
     <td>
     Text
     </td>
