--- a/index.html
+++ b/index.html
@@ -37,22 +37,20 @@ td {
 <table width="60%">
 <thead>
   <tr>
-    <th></th>
-    <th height = 100px>about . research . contact</th>
+    <th><p style="font-family:Montserrat;font-size:14px;"><b>Abby Walter</b></p></th>
+    <th height = 100px>about . research . field work . advice</th>
   </tr>
 </thead>
 <tbody>
   <tr>
     <td width = "25%">
-    <img src = "images/abby.png" width="125" height="125">
-    <br>
-      <br><p style="font-family:Montserrat;font-size:14px;"><b>Abby Walter</b></p>
-            
+    <img src = "images/abby.png" width="150" height="150">
+
     <br>
       <br><a href = "http://github.com/lawalter"><i class="fab fa-github fa-2x"></i> github</a>
       <br><a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-2x"></i> twitter</a>
-      <br><a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-2x"></i> orcid</a>
-      <br><i class="ai ai-dryad ai-2x"></i> dryad
+      <br><a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-1x"></i> orcid</a>
+      <br><i class="ai ai-dryad ai-xl"></i> dryad
       <br><a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird"></i> eBird</a>
       <br><i class="fas fa-envelope fa-2x"></i> email
     <td>
