--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="css/academicons.min.css">
+    <script src="https://kit.fontawesome.com/fcfb671baa.js" crossorigin="anonymous"></script>
     <style>
       table {
 border-collapse:collapse;
@@ -37,7 +38,7 @@ td {
 <table width="60%">
 <thead>
   <tr>
-    <th><p style="font-family:Montserrat;font-size:14px;"><b>Abby Walter</b></p></th>
+    <th><p style="font-family:Montserrat;font-size:20px;"><b>Abby Walter</b></p></th>
     <th height = 100px>about . research . field work . advice</th>
   </tr>
 </thead>
