--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ td {
   text-align:left;
   font-size:14px;
   word-break:normal;
-  vertical-align:top;
+  vertical-align:middle;
   border-width:1px;
       border-style:solid;
   border-color:#000000;
@@ -48,12 +48,27 @@ td {
     <img src = "images/abby.png" width="150" height="150">
 
     <br>
-      <br><a href = "http://github.com/lawalter"><i class="fab fa-github fa-2x"></i> github</a>
-      <br><a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-2x"></i> twitter</a>
-      <br><a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-1x"></i> orcid</a>
-      <br><i class="ai ai-dryad ai-xl"></i> dryad
-      <br><a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird"></i> eBird</a>
-      <br><i class="fas fa-envelope fa-2x"></i> email
+      <br>
+      <table>
+        <tr>
+          <td><a href = "http://github.com/lawalter"><i class="fab fa-github fa-2x"></i></a></td><td>github</td>
+        </tr>
+        <tr>
+          <td><a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-2x"></i></a></td><td>twitter</td>
+        </tr>
+        <tr>
+          <td><a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-1x"></i></a></td><td>orcid</td>
+        </tr>
+        <tr>
+          <td><i class="ai ai-dryad ai-xl"></i></td><td>dryad</td>
+        </tr>
+        <tr>
+          <td><a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird"></i></a></td><td>eBird</td>
+        </tr>
+        <tr>
+          <td><i class="fas fa-envelope fa-2x"></i></td><td>email</td>
+        </tr>
+      </table>
     <td>
     Text
     </td>
