--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ border-collapse:collapse;
 
 th{
 font-family:"Lucida Console", Monaco, monospace;
-font-size:14px;
+font-size:12px;
 text-align:left;
 vertical-align:bottom;
 border-width:1px;
@@ -23,7 +23,7 @@ word-break:normal}
 td {
    font-family:"Lucida Console", Monaco, monospace;
   text-align:left;
-  font-size:14px;
+  font-size:12px;
   word-break:normal;
   vertical-align:middle;
   border-width:1px;
@@ -39,7 +39,7 @@ td {
 <thead>
   <tr>
     <th><p style="font-family:Montserrat;font-size:20px;"><b>Abby Walter</b></p></th>
-    <th height = 100px>about . research . field work . advice</th>
+    <th height = 100px>about . publications . field work . cv . portfolio</th>
   </tr>
 </thead>
 <tbody>
