--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ td {
 <table width="60%">
 <thead>
   <tr>
-    <th><p style="font-family:Montserrat;font-size:20px;"><b>Abby Walter</b></p></th>
+    <th style="font-family:Montserrat;font-size:24px;"><b>Abby Walter</b></th>
     <th height = 100px>about . publications . field work . cv . portfolio</th>
   </tr>
 </thead>
