--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ font-family:"Lucida Console", Monaco, monospace;
 font-size:12px;
 text-align:left;
 vertical-align:bottom;
-border-width:1px;
+border-width:0px;
       border-style:solid;
   border-color:#000000;
 padding:10px 5px;
@@ -26,7 +26,7 @@ td {
   font-size:12px;
   word-break:normal;
   vertical-align:middle;
-  border-width:1px;
+  border-width:0px;
       border-style:solid;
   border-color:#000000;
   padding:10px 5px}
@@ -57,13 +57,13 @@ td {
           <td><a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-2x"></i></a></td><td>twitter</td>
         </tr>
         <tr>
-          <td><a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-1x"></i></a></td><td>orcid</td>
+          <td><a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-2x"></i></a></td><td>orcid</td>
         </tr>
         <tr>
-          <td><i class="ai ai-dryad ai-xl"></i></td><td>dryad</td>
+          <td><i class="ai ai-dryad ai-2x"></i></td><td>dryad</td>
         </tr>
         <tr>
-          <td><a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird"></i></a></td><td>eBird</td>
+          <td><a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird 2x"></i></a></td><td>eBird</td>
         </tr>
         <tr>
           <td><i class="fas fa-envelope fa-2x"></i></td><td>email</td>
