--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ td {
           <td><i class="ai ai-dryad ai-2x"></i></td><td>dryad</td>
         </tr>
         <tr>
-          <td><a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird 2x"></i></a></td><td>eBird</td>
+          <td><a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird fa-2x"></i></a></td><td>eBird</td>
         </tr>
         <tr>
           <td><i class="fas fa-envelope fa-2x"></i></td><td>email</td>
