--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ border-collapse:collapse;
         border-spacing:0}
 
 th{
-font-family:"Lucida Console", Monaco, monospace;
+font-family:"Roboto", sans-serif;
 font-size:12px;
 text-align:left;
 vertical-align:bottom;
@@ -72,9 +72,6 @@ td {
     <td>
     Text
     </td>
-  </tr>
-  <tr>
-    <td colspan="2">Website by Abby Walter</td>
   </tr>
 </tbody>
 </table>
