--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ border-collapse:collapse;
         border-spacing:0}
 
 th{
-font-family:"Roboto", sans-serif;
-font-size:12px;
+font-family:"Montserrat", sans-serif;
+font-size:14px;
 text-align:left;
 vertical-align:bottom;
 border-width:0px;
@@ -21,7 +21,7 @@ padding:10px 5px;
 word-break:normal}
 
 td {
-   font-family:"Lucida Console", Monaco, monospace;
+   font-family:"Montserrat", sans-serif;
   text-align:left;
   font-size:12px;
   word-break:normal;
@@ -30,6 +30,15 @@ td {
       border-style:solid;
   border-color:#000000;
   padding:10px 5px}
+      
+a:link, a:visited {
+  color: #93df05;
+}
+
+a:hover, a:active {
+  color: black;
+}      
+      
     </style>
   </head>
   <body>
