--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ a:hover, a:active {
 <thead>
   <tr>
     <th style="font-family:Montserrat;font-size:24px;"><b>Abby Walter</b></th>
-    <th height = 100px>about . publications . field work . cv . portfolio</th>
+    <th height = 100px><a href = "about.html">about</a> . <a href = "pubs.html">publications</a> . <a href = "fieldwork.html">field work</a> . <a href = "cv.html">cv</a> . <a href = "portfolio.html">portfolio</a></th>
   </tr>
 </thead>
 <tbody>
@@ -78,8 +78,10 @@ a:hover, a:active {
           <td><i class="fas fa-envelope fa-2x"></i></td><td>email</td>
         </tr>
       </table>
-    <td>
+    <td style="vertical-align:top">
+      
     Text
+      
     </td>
   </tr>
 </tbody>
