--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@ td {
   padding:10px 5px}
       
 a:link, a:visited {
-  color: #93df05;
+  color: black;
+  text-decoration: none;
 }
 
 a:hover, a:active {
-  color: black;
+  color: #93df05;
+  text-decoration: none;
 }      
       
     </style>
