--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ a:hover, a:active {
           <td><a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird fa-2x"></i></a></td><td>eBird</td>
         </tr>
         <tr>
-          <td><i class="fas fa-envelope fa-2x"></i></td><td>email</td>
+          <td><a href="mailto:lawalter@vcu.edu"><i class="fas fa-envelope fa-2x"></i></a></td><td>email</td>
         </tr>
       </table>
     <td style="vertical-align:top">
