--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@ a:hover, a:active {
     <th style="font-family:Montserrat;font-size:24px;"><b>Abby Walter</b></th>
   </tr>
   <tr>
-    <td>
+    <td style="border-top: 1px solid black; border-bottom: 1px solid black;">
       <a href = "about.html">about</a> . 
       <a href = "pubs.html">publications</a> . 
       <a href = "fieldwork.html">field work</a> . 
