--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap">
     <link rel="stylesheet" href="css/academicons.min.css">
     <script src="https://kit.fontawesome.com/fcfb671baa.js" crossorigin="anonymous"></script>
     <style>
@@ -51,9 +51,9 @@ a:hover, a:active {
   <thead>
   <tr>
     <th rowspan="2"><img src = "images/abby.png" width="150" height="150"></th>
-    <th style="font-family:Space Grotesk;font-size:48px;"><b>Abby Walter</b></th>
+    <th style="font-family:Rubik;font-size:48px;"><b>Abby Walter</b></th>
   </tr>
-  <tr>
+  <tr style="vertical-align:top">
     <td style="border-top: 1px solid white; border-bottom: 1px solid white;">
       <a href = "about.html">about</a> . 
       <a href = "pubs.html">publications</a> . 
