--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,6 @@ th{
 font-family:"Montserrat", sans-serif;
 font-size:14px;
 text-align:left;
-vertical-align:bottom;
 border-width:0px;
       border-style:solid;
   border-color:#000000;
@@ -26,7 +25,6 @@ td {
   text-align:left;
   font-size:12px;
   word-break:normal;
-  vertical-align:middle;
   border-width:0px;
       border-style:solid;
   border-color:#000000;
@@ -49,9 +47,15 @@ a:hover, a:active {
  <center>
 <table width="60%">
   <thead>
-  <tr>
+  <tr style="vertical-align:bottom">
     <th rowspan="2"><img src = "images/abby.png" width="150" height="150"></th>
-    <th style="font-family:Rubik;font-size:48px;"><b>Abby Walter</b></th>
+    <th style="font-family:Rubik;font-size:48px;"><b>Abby Walter </b>
+      <a href = "http://github.com/lawalter"><i class="fab fa-github fa-2x"></i></a>
+      <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-2x"></i></a>
+      <a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-2x"></i></a>
+      <i class="ai ai-dryad ai-2x"></i>
+      <a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird fa-2x"></i></a>
+      <a href="mailto:lawalter@vcu.edu"><i class="fas fa-envelope fa-2x"></i></a></th>
   </tr>
   <tr style="vertical-align:top">
     <td style="border-top: 1px solid white; border-bottom: 1px solid white;">
@@ -59,13 +63,7 @@ a:hover, a:active {
       <a href = "pubs.html">publications</a> . 
       <a href = "fieldwork.html">field work</a> . 
       <a href = "cv.html">cv</a> . 
-      <a href = "portfolio.html">portfolio</a> . 
-      <a href = "http://github.com/lawalter"><i class="fab fa-github fa-2x"></i></a>
-      <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-2x"></i></a>
-      <a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-2x"></i></a>
-      <i class="ai ai-dryad ai-2x"></i>
-      <a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird fa-2x"></i></a>
-      <a href="mailto:lawalter@vcu.edu"><i class="fas fa-envelope fa-2x"></i></a>
+      <a href = "portfolio.html">portfolio</a> 
     </td>
   </tr>
 </thead>
