--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@ a:hover, a:active {
   </tr>
   <tr style="vertical-align:top">
     <td style="border-top: 1px solid white; border-bottom: 1px solid white;">
-      <a href = "about.html">about</a> . 
+      <a href = "index.html">about</a> . 
       <a href = "pubs.html">publications</a> . 
       <a href = "fieldwork.html">field work</a> . 
       <a href = "cv.html">cv</a> . 
