--- a/portfolio.html
+++ b/portfolio.html
@@ -10,16 +10,6 @@
 border-collapse:collapse;
         border-spacing:0}
 
-th{
-font-family:"Montserrat", sans-serif;
-font-size:14px;
-text-align:left;
-border-width:0px;
-      border-style:solid;
-  border-color:#000000;
-padding:10px 5px;
-word-break:normal}
-
 td {
    font-family:"Montserrat", sans-serif;
   text-align:left;
@@ -57,7 +47,7 @@ a:hover, a:active {
       <a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird fa-2x"></i></a>
       <a href="mailto:lawalter@vcu.edu"><i class="fas fa-envelope fa-2x"></i></a></th>
   </tr>
-  <tr style="vertical-align:top">
+  <tr style="vertical-align:top;font-family:"Montserrat",sans-serif;font-size:14px;">
     <td style="border-top: 1px solid white; border-bottom: 1px solid white;">
       <a href = "index.html">about</a> . 
       <a href = "pubs.html">publications</a> . 
