--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@ a:hover, a:active {
   <thead>
   <tr style="vertical-align:bottom">
     <th rowspan="2"><img src = "images/abby.png" width="150" height="150"></th>
-    <th><p style="font-family:Rubik;font-size:48px;"><b>Abby Walter </b></p>
+    <th><span style="font-family:Rubik;font-size:48px;"><b>Abby Walter </b></span>
       <a href = "http://github.com/lawalter"><i class="fab fa-github fa-2x"></i></a>
       <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-2x"></i></a>
       <a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-2x"></i></a>
