--- a/portfolio.html
+++ b/portfolio.html
@@ -39,13 +39,7 @@ a:hover, a:active {
   <thead>
   <tr style="vertical-align:bottom">
     <th rowspan="2" width = "150"><img src = "images/abby.png" width="150" height="150"></th>
-    <th style="font-family:Rubik;font-size:48px;"><b>Abby Walter </b>
-      <a href = "http://github.com/lawalter"><i class="fab fa-github fa-2x"></i></a>
-      <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-2x"></i></a>
-      <a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-2x"></i></a>
-      <i class="ai ai-dryad ai-2x"></i>
-      <a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird fa-2x"></i></a>
-      <a href="mailto:lawalter@vcu.edu"><i class="fas fa-envelope fa-2x"></i></a></th>
+    <th style="font-family:Rubik;font-size:56px;text-align:left;"><b>Abby Walter </b></th>
   </tr>
   <tr>
     <td style="vertical-align:top;font-family:"Montserrat",sans-serif;font-size:14px;">
@@ -53,7 +47,13 @@ a:hover, a:active {
       <a href = "pubs.html">publications</a> . 
       <a href = "fieldwork.html">field work</a> . 
       <a href = "cv.html">cv</a> . 
-      <a href = "portfolio.html">portfolio</a> 
+      <a href = "portfolio.html">portfolio</a> . 
+      <a href = "http://github.com/lawalter"><i class="fab fa-github fa-lg"></i></a>
+      <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-lg"></i></a>
+      <a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-lg"></i></a>
+      <i class="ai ai-dryad ai-lg"></i>
+      <a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird fa-lg"></i></a>
+      <a href="mailto:lawalter@vcu.edu"><i class="fas fa-envelope fa-lg"></i></a>
     </td>
   </tr>
 </thead>
