--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,8 @@ border-collapse:collapse;
         border-spacing:0}
 
 td {
-  font-family:"Montserrat", sans-serif;
+  font-family:"Rubik", sans-serif;
   text-align:left;
-  font-size:12px;
   word-break:normal;
   border-width:1px;
   border-style:solid;
@@ -43,11 +42,11 @@ a:hover, a:active {
   </tr>
   <tr>
     <td style="vertical-align:top;font-family:"Montserrat",sans-serif;font-size:14px;">
-      <a href = "index.html">about</a> . 
-      <a href = "pubs.html">publications</a> . 
-      <a href = "fieldwork.html">field work</a> . 
-      <a href = "cv.html">cv</a> . 
-      <a href = "portfolio.html">portfolio</a> . 
+      <a href = "index.html">about</a> / 
+      <a href = "pubs.html">publications</a> / 
+      <a href = "fieldwork.html">field work</a> / 
+      <a href = "cv.html">cv</a> / 
+      <a href = "portfolio.html">portfolio</a> / 
       <a href = "http://github.com/lawalter"><i class="fab fa-github fa-lg"></i></a>
       <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-lg"></i></a>
       <a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-lg"></i></a>
