--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,15 @@
 border-collapse:collapse;
         border-spacing:0}
 
+th {
+  font-family:"Rubik", sans-serif;
+  text-align:left;
+  word-break:normal;
+  border-width:0px;
+  border-style:solid;
+  border-color:#000000;
+  padding:10px 5px}
+      
 td {
   font-family:"Rubik", sans-serif;
   text-align:left;
