--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@ a:hover, a:active {
   <thead>
   <tr style="vertical-align:bottom">
     <th rowspan="2" width = "150"><img src = "images/abby.png" width="150" height="150"></th>
-    <th style="font-family:Rubik;font-size:56px;text-align:left;"><b>Abby Walter </b></th>
+    <th style="font-family:Rubik;font-size:56px;text-align:left;vertical-align:bottom"><b>Abby Walter </b></th>
   </tr>
   <tr>
     <td style="vertical-align:top;font-family:"Montserrat",sans-serif;font-size:14px;">
