--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik">
     <link rel="stylesheet" href="css/academicons.min.css">
     <script src="https://kit.fontawesome.com/fcfb671baa.js" crossorigin="anonymous"></script>
     <style>
@@ -47,7 +47,7 @@ a:hover, a:active {
   <thead>
   <tr style="vertical-align:bottom">
     <th rowspan="2" width = "150"><img src = "images/abby.png" width="150" height="150"></th>
-    <th style="font-family:Rubik;font-size:56px;text-align:left;vertical-align:bottom"><b>Abby Walter </b></th>
+    <th style="font-family:Rubik;font-size:56px;font-weight:600;text-align:left;vertical-align:bottom"><b>Abby Walter </b></th>
   </tr>
   <tr>
     <td style="vertical-align:top;font-family:"Montserrat",sans-serif;font-size:14px;">
@@ -67,7 +67,7 @@ a:hover, a:active {
 </thead>
 <tbody>
   <tr>
-    <td style="font-family:Rubik;font-size:12px;text-align:left;vertical-align:top" colspan="2">
+    <td style="vertical-align:top" colspan="2">
       
       <b>Portfolio</b>
       
