--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@ a:hover, a:active {
   </tr>
   <tr>
     <td style="vertical-align:top;font-family:"Montserrat",sans-serif;font-size:16px;">
-      <a href = "index.html">about</a> / 
+      <a href = "index.html">about</a> <font color = "#93df05">/</font> 
       <a href = "pubs.html">publications</a> / 
       <a href = "fieldwork.html">field work</a> / 
       <a href = "cv.html">cv</a> / 
