--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@ th {
   font-family:"Rubik", sans-serif;
   text-align:left;
   word-break:normal;
-  border-width:0px;
+  border-width:1px;
   border-style:solid;
   border-color:#000000;
   padding:10px 5px}
@@ -23,7 +23,7 @@ td {
   font-family:"Rubik", sans-serif;
   text-align:left;
   word-break:normal;
-  border-width:0px;
+  border-width:1px;
   border-style:solid;
   border-color:#000000;
   padding:10px 5px}
@@ -52,10 +52,10 @@ a:hover, a:active {
   <tr>
     <td style="vertical-align:top;font-family:"Montserrat",sans-serif;font-size:16px;">
       <a href = "index.html">about</a> <font color = "#93df05">/</font> 
-      <a href = "pubs.html">publications</a> / 
-      <a href = "fieldwork.html">field work</a> / 
-      <a href = "cv.html">cv</a> / 
-      <a href = "portfolio.html">portfolio</a> / 
+      <a href = "pubs.html">publications</a> <font color = "#93df05">/</font> 
+      <a href = "fieldwork.html">field work</a> <font color = "#93df05">/</font> 
+      <a href = "cv.html">cv</a> <font color = "#93df05">/</font> 
+      <a href = "portfolio.html">portfolio</a> <font color = "#93df05">/</font> 
       <a href = "http://github.com/lawalter"><i class="fab fa-github fa-lg"></i></a>
       <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-lg"></i></a>
       <a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-lg"></i></a>
