--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 border-collapse:collapse;
         border-spacing:0}
 
-th.icon {
+th.icon th{
   font-family:"Rubik", sans-serif;
   text-align:left;
   word-break:normal;
@@ -19,19 +19,19 @@ th.icon {
   border-color:#000000;
   padding:10px 5px}
 
-th.name {
+th.name th{
   font-family:Rubik, sans-serif;
   font-size:56px;
   font-weight:600;
   text-align:left;
   vertical-align:bottom"}
       
-td.menu {
+td.menu td{
   vertical-align:top;
   font-family:"Montserrat",sans-serif;
   font-size:16px"}
   
-td.body {
+td.body td{
   font-family:"Rubik", sans-serif;
   text-align:left;
   word-break:normal;
