--- a/portfolio.html
+++ b/portfolio.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="css/academicons.min.css">
     <script src="https://kit.fontawesome.com/fcfb671baa.js" crossorigin="anonymous"></script>
     <style>
-table {
+table.oldschool {
   border-collapse:collapse;
   border-spacing:0}
 
-th.icon th {
+table.oldschool th.icon {
   font-family:Rubik, sans-serif;
   text-align:left;
   word-break:normal;
@@ -19,19 +19,19 @@ th.icon th {
   border-color:#000000;
   padding:10px 5px}
 
-th.name th {
+table.oldschool th.name {
   font-family:Rubik, sans-serif;
   font-size:56px;
   font-weight:600;
   text-align:left;
   vertical-align:bottom}
       
-td.menu td {
+table.oldschool td.menu {
   vertical-align:top;
   font-family:"Montserrat",sans-serif;
   font-size:16px"}
   
-td.body td {
+table.oldschool td.body {
   font-family:Rubik, sans-serif;
   text-align:left;
   word-break:normal;
@@ -54,7 +54,7 @@ a:hover, a:active {
   <body>
   
  <center>
-<table width="60%">
+<table class="oldschool" width="60%">
   <thead>
   <tr>
     <th class="icon" rowspan="2" width="150"><img src="images/abby.png" width="150" height="150"></th>
