--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@ table.oldschool {
   border-spacing:0}
 
 table.oldschool th.icon {
-  font-family:Rubik, sans-serif;
+  font-family:"Rubik", sans-serif;
   text-align:left;
   word-break:normal;
   border-width:1px;
@@ -20,7 +20,7 @@ table.oldschool th.icon {
   padding:10px 5px}
 
 table.oldschool th.name {
-  font-family:Rubik, sans-serif;
+  font-family:"Rubik", sans-serif;
   font-size:56px;
   font-weight:600;
   text-align:left;
@@ -32,7 +32,7 @@ table.oldschool td.menu {
   font-size:16px"}
   
 table.oldschool td.body {
-  font-family:Rubik, sans-serif;
+  font-family:"Rubik", sans-serif;
   text-align:left;
   word-break:normal;
   border-width:1px;
