--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@ table.oldschool th.name {
 table.oldschool td.menu {
   vertical-align:top;
   font-family:"Montserrat",sans-serif;
-  font-size:16px"}
+  font-size:16px}
   
 table.oldschool td.body {
   font-family:"Rubik", sans-serif;
