--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto">
     <link rel="stylesheet" href="css/academicons.min.css">
     <script src="https://kit.fontawesome.com/fcfb671baa.js" crossorigin="anonymous"></script>
     <style>
@@ -29,7 +30,7 @@ table.oldschool td.menu {
   font-size:16px;}
   
 table.oldschool td.body {
-  font-family:"Rubik",sans-serif;
+  font-family:"Roboto",sans-serif;
   text-align:left;
   word-break:normal;
   border-width:1px;
