--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro">
     <link rel="stylesheet" href="css/academicons.min.css">
     <script src="https://kit.fontawesome.com/fcfb671baa.js" crossorigin="anonymous"></script>
     <style>
@@ -30,7 +30,7 @@ table.oldschool td.menu {
   font-size:16px;}
   
 table.oldschool td.body {
-  font-family:"Roboto",sans-serif;
+  font-family:"Source Sans Pro",sans-serif;
   text-align:left;
   word-break:normal;
   border-width:0px;
