--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ table.oldschool td.menu {
   
 table.oldschool td.body {
   font-family:"Montserrat",sans-serif;
+  font-size:12px;
   text-align:left;
   word-break:normal;
   border-width:0px;
