--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@ a:hover, a:active {
     <td class="menu">
       <a href = "index.html">home</a> / 
       <a href = "pubs.html">publications</a> / 
-      <a href = "portfolio.html">portfolio work</a> / 
+      <a href = "portfolio.html">portfolio</a> / 
       <a href = "cv.html">cv</a> / 
       <a href = "http://github.com/lawalter"><i class="fab fa-github fa-lg"></i></a>
       <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-lg"></i></a>
