--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ a:hover, a:active {
     <td class="menu">
       <a href = "index.html">about</a> / 
       <a href = "pubs.html">publications</a> / 
-      <a href = "portfolio.html">data projects</a> / 
-      <a href = "portfolio.html">field projects</a> / 
+      <a href = "data.html">data projects</a> / 
+      <a href = "field.html">field work</a> / 
       <a href = "cv.html">cv</a> / 
       <a href = "http://github.com/lawalter"><i class="fab fa-github fa-lg"></i></a>
       <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-lg"></i></a>
