--- a/field.html
+++ b/field.html
@@ -60,7 +60,7 @@ a:hover, a:active {
   </tr>
   <tr>
     <td class="menu">
-      <a href = "index.html">home</a> / 
+      <a href = "index.html">about</a> / 
       <a href = "pubs.html">publications</a> / 
       <a href = "data.html">data projects</a> / 
       <a href = "field.html">field work</a> / 
