--- a/pubs.html
+++ b/pubs.html
@@ -60,9 +60,10 @@ a:hover, a:active {
   </tr>
   <tr>
     <td class="menu">
-      <a href = "index.html">home</a> / 
+      <a href = "index.html">about</a> / 
       <a href = "pubs.html">publications</a> / 
-      <a href = "portfolio.html">portfolio</a> / 
+      <a href = "data.html">data projects</a> / 
+      <a href = "field.html">field work</a> / 
       <a href = "cv.html">cv</a> / 
       <a href = "http://github.com/lawalter"><i class="fab fa-github fa-lg"></i></a>
       <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-lg"></i></a>
