--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@ a:hover, a:active {
   <thead>
   <tr>
     <th class="icon" rowspan="2" width="150"><img src="images/abby.png" width="150" height="150"></th>
-    <th class="name"><b>Abby Walter </b></th>
+    <th class="name"><b>Abby Walter </b>
+      <a href = "http://github.com/lawalter"><i class="fab fa-github fa-lg"></i></a>
+      <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-lg"></i></a>
+      <a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-lg"></i></a>
+      <i class="ai ai-dryad ai-lg"></i>
+      <a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird fa-lg"></i></a>
+      <a href="mailto:lawalter@vcu.edu"><i class="fas fa-envelope fa-lg"></i></a></th>
   </tr>
   <tr>
     <td class="menu">
@@ -64,13 +70,7 @@ a:hover, a:active {
       <a href = "pubs.html">publications</a> / 
       <a href = "data.html">data projects</a> / 
       <a href = "field.html">field work</a> / 
-      <a href = "cv.html">cv</a> / 
-      <a href = "http://github.com/lawalter"><i class="fab fa-github fa-lg"></i></a>
-      <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-lg"></i></a>
-      <a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-lg"></i></a>
-      <i class="ai ai-dryad ai-lg"></i>
-      <a href = "https://ebird.org/profile/MjgzMDYw/US"><i class="fas fa-kiwi-bird fa-lg"></i></a>
-      <a href="mailto:lawalter@vcu.edu"><i class="fas fa-envelope fa-lg"></i></a>
+      <a href = "cv.html">cv</a>
     </td>
   </tr>
 </thead>
