--- a/pubs.html
+++ b/pubs.html
@@ -48,6 +48,7 @@ a:hover, a:active {
   text-decoration: none;}      
       
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86">
   </head>
   <body>
   
