--- a/pubs.html
+++ b/pubs.html
@@ -65,8 +65,8 @@ a:hover, a:active {
       <a href = "pubs.html">publications</a> / 
       <a href = "data.html">data projects</a> / 
       <a href = "field.html">field work</a> / 
-      <a href = "cv.html">cv</a> / 
-      <a href = "http://github.com/lawalter"><i class="fab fa-github fa-lg"></i></a>
+      <a href = "cv.html">cv</a>
+      <p><a href = "http://github.com/lawalter"><i class="fab fa-github fa-lg"></i></a>
       <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-lg"></i></a>
       <a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-lg"></i></a>
       <i class="ai ai-dryad ai-lg"></i>
