--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ a:hover, a:active {
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-  
+    <center>
 <table class="oldschool">
   <thead>
   <tr>
@@ -86,7 +86,7 @@ a:hover, a:active {
   </tr>
 </tbody>
 </table>
-    
+    </center>   
 
 </body>
 </html>
