--- a/pubs.html
+++ b/pubs.html
@@ -48,7 +48,7 @@ a:hover, a:active {
   text-decoration: none;}      
       
     </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
   
