--- a/field.html
+++ b/field.html
@@ -53,7 +53,7 @@ a:hover, a:active {
   <body>
   
  <center>
-<table class="oldschool" width="60%">
+<table class="oldschool">
   <thead>
   <tr>
     <th class="icon" rowspan="2" width="150"><img src="images/abby.png" width="150" height="150"></th>
