--- a/pubs.html
+++ b/pubs.html
@@ -63,9 +63,7 @@ a:hover, a:active {
     <td class="menu">
       <a href = "index.html">about</a> / 
       <a href = "pubs.html">publications</a> / 
-      <a href = "data.html">data projects</a> / 
-      <a href = "field.html">field work</a> / 
-      <a href = "cv.html">cv</a>
+      <a href = "data.html">data projects</a> 
       <p><a href = "http://github.com/lawalter"><i class="fab fa-github fa-lg"></i></a>
       <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-lg"></i></a>
       <a href = "https://orcid.org/0000-0003-4017-5596"><i class="ai ai-orcid ai-lg"></i></a>
