--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </tr>
   <tr>
     <td class="body" colspan="2>
-       Website by Abby Walter
+      <p>Website by Abby Walter
     </td>
   </tr>
 </tbody>
