--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </td>
   </tr>
   <tr>
-    <td class="body" colspan="2>
-      <p>Website by Abby Walter
+    <td class="body" colspan="2">
+      Website by Abby Walter
     </td>
   </tr>
 </tbody>
