--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </td>
   </tr>
   <tr>
-    <td class="body" colspan="2">
+    <td class="foot" colspan="2">
       Website by Abby Walter
     </td>
   </tr>
