--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <table class="oldschool">
   <thead>
   <tr>
+    <td class="body" rowspan="3"></td>
     <th class="icon" rowspan="2" width="150"><img src="images/abby.png" width="150" height="150"></th>
     <th class="name"><b>Abby Walter </b></th>
+    <td class="body" rowspan="3"></td>
   </tr>
   <tr>
     <td class="menu">
