--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <thead>
   <tr>
     <td class="body" rowspan="4" width="100"></td>
-    <th class="icon" rowspan="2" width="150"><img src="images/abby.png" width="150" height="150"></th>
-    <th class="name"><b>Abby Walter </b></th>
+    <td class="icon" rowspan="2" width="150"><img src="images/abby.png" width="150" height="150"></td>
+    <td class="name"><b>Abby Walter </b></td>
     <td class="body" rowspan="4" width="100"></td>
   </tr>
   <tr>
