--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       
       <p>Howdy, my name is Abby! I'm a Wildlife Biologist and Data Analyst living near Washington, DC. I am currently pursuing my dream job of processing and managing migratory bird data. I work in R and python most days, but my background is in ornithology. 
       <p>Before starting my current position, I studied Red-headed Woodpecker parental care behavior and home range size for my Master's degree with the <a href="https://rampages.us/bullucklab/">Bulluck Avian Ecology Lab</a> at Virginia Commonwealth University. 
-         Between graduate school and earning two B.S. in my hometown at the University of Delaware, I also did a lot of avian field work. 
-         I've specifically worked with Piping Plovers, Roseate Terns, Red-cockaded Woodpeckers, Gray Catbirds, and Wood Thrush, plus a multitude of other eastern birds of North America via mist netting and point counts. 
+         In the time between graduate school and attending college in my hometown at the University of Delaware, I also did a lot of other avian field work. 
+         I've specifically worked with Piping Plovers, Roseate Terns, Red-cockaded Woodpeckers, Gray Catbirds, and Wood Thrush, plus a multitude of eastern birds of North America via mist netting and point counts. 
          Over time, my career interests have brought me to the world of data management. In the coming years, I look forward to learning more about the art of data visualization, science communication, and new coding languages.
 
     </td>
