--- a/gifs.html
+++ b/gifs.html
@@ -34,7 +34,7 @@
   <tr>
     <td class="body" colspan="2">
       
-      <b>.gif gallery</b>
+      <b>Gif Gallery</b>
       
       <p>Coming soon!
 
