--- a/pubs.html
+++ b/pubs.html
@@ -22,7 +22,7 @@
     <td class="menu">
       <a href = "index.html">about</a> / 
       <a href = "pubs.html">publications</a> / 
-      <a href = "data.html">projects</a> / 
+      <a href = "projs.html">projects</a> / 
       <a href = "gifs.html">gifs</a>
       <p><a href = "http://github.com/lawalter"><i class="fab fa-github fa-lg"></i></a>
       <a href = "http://twitter.com/lawaltr"><i class="fab fa-twitter fa-lg"></i></a>
