--- a/gifs.html
+++ b/gifs.html
@@ -56,6 +56,10 @@
         <br>Parents must provision, or bring food to, their offspring at the nest cavity.
         <br><img src = "gifs/prov_clip_1.gif">
         
+      <p><b>Resting</b>
+        <br>A common behavior also referred to as "nest guarding" when done near the nest.
+        <br><img src = "gifs/stat.gif">
+        
       <p><b>Stretching</b>
         <br>Birds stretch for the same reasons people do!
         <br><img src = "gifs/stretch.gif">
