--- a/projs.html
+++ b/projs.html
@@ -51,7 +51,7 @@
         <br>2020 [Archived]
         <br>Created as a test case for my r-shiny-electron-app repository, this is a simple R Shiny app packaged with Electron that creates random color combinations for bird banding. 
         Colors can be selected based on what's available in a banding kit, and selections are saved for future use via <a href = "https://github.com/trestletech/shinyStore">shinyStore</a>.
-        <p><center><img src="https://github.com/lawalter/colorband-app/raw/master/images/app_img_m.png"></center>
+        <p><center><img src="https://github.com/lawalter/colorband-app/raw/master/images/app_img_m.png" id="thumb"></center>
           
     </td>
   </tr>
