--- a/projs.html
+++ b/projs.html
@@ -49,7 +49,7 @@
         <br><b>Repo:</b> <a href = "https://github.com/lawalter/r-shiny-electron-app">r-shiny-electron-app</a>
         <br>This is a guide to creating a desktop R Shiny app using Electron in both macOS and Windows.
         
-      <p><b>Colorband Combination Generator</b>
+      <p><b><a href = "https://lawaltr.shinyapps.io/colorband/">Colorband Combination Generator</a></b>
         <br><b>[Archived]</b> 2020 
         <br><b>Repo:</b> <a href = "https://github.com/lawalter/colorband-app">colorband-app</a>
         <br>Created as a test case for my r-shiny-electron-app repository, this is a simple R Shiny app packaged with Electron that creates random color combinations for bird banding. 
